- herlinken van range Agent in eigenschap toegekendDoor
- herlinken van range Punt in verschillende eigenschappen
- eigenschap metadata verwijderd omdat die niet bestaat in html (bestaat wel als rol)
- klasse Bereik komt 2x voor: verwijdering duplicaat in package Hulppakket. 
- verwijder benoemde eigenschappen die als algemene associatie zijn opgenomen om de overeenkomst met ISO te documenteren maar niet uitgewerkt zijn. 
  De eigenschappen zijn beschikbaar door hun rol, die wel opgenomen zijn in de html. Het zijn Ontwerp, Domein, Fenonmeen, Intentie
- verwijder de hulppakket referenties op de diagramma van Sensoren en Bemonstering. Dit zorgt voor duplicaten.  
  De enige toevoeging is een verwijzing naar het AP observaties en metingen in de usage note. 
  Deze referentie kan terug toegevoegd worden indien men de hulppakket klassen gebruikt voor alle referenties in het model.
  Bemonsteringsvlak, Bemonsteringspunt, Bemonsteringscurve, proces, procedure, Bemonsterings3Dobject, Bemonsteringsproces
- voeg een definitie toe aan Opmetingmethode

Todo bij een rollout toolchain 4.0: het verwijderen van de verborgen relatie Intentie. Deze komt niet in het model voor maar zit achterliggend in de file.

2024-12-05
- fix definitie eigenschap meetwaardepaar van klasse Fractiemeting
- geassocieerd kenmerk + verwijdering object, observatie, bemonsteringscurve  van hulppakket
- Meetwaardepaar is van typologie veranderd (klasse -> datatype): dat zorgt voor een dubbel in de html dev 4.0
- eigenschap meetreeksresultaat en fractiemetingresultaat worden door toolchain 4.0 niet goed weergegeven.


2025-02-17
- finaliseer kandidaatstandaarden 2024-10-01
 
Kandidaatstandaard observaties:
 - verwijdering associatie informtatie intentie (was enkel zichtbaar op diagramma)
 - zet package tag OSLO-BO_OBservaties voor bemonsterdObject eigenschap
 - verwijder enkele klasses uit Hulppakket van diagramma om dubbele voorkomen te verminderen.
 - verwijder hidden geassocieerdschuifweerstandsproef