@@ -6,8 +6,8 @@
         "diagram": "OSLO-BO_Interpretaties",
         "template": "bo-interpretaties-voc.j2",
         "title": "Bodem en Ondergrond Interpretaties (Vocabularium)",
-        "publication-state": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
-        "publication-date": "2023-04-01",
+        "publication-state": "https://data.vlaanderen.be/id/concept/StandaardStatus/KandidaatStandaard",
+        "publication-date": "2024-10-01",
         "license": "https://data.vlaanderen.be/id/licentie/modellicentie-gratis-hergebruik/v1.0",
         "contributors-file": "stakeholders.csv",
         "contributors-column": "MijnKolom",
