@@ -2,12 +2,12 @@
 {
         "name": "bo-observaties",
         "type": "voc",
-        "eap": "OSLO-BodemEnOndergrond-AP.EAP",
+        "eap": "OSLO-BodemEnOndergrond-AP-Observaties.EAP",
         "diagram": "OSLO-BO_Observaties",
         "template": "bo-observaties-voc.j2",
-        "title": "BO Observaties (Vocabularium)",
-        "publication-state": "https://data.vlaanderen.be/id/concept/StandaardStatus/OntwerpStandaard",
-        "publication-date": "2021-08-01",
+        "title": "Observaties (Vocabularium)",
+        "publication-state": "https://data.vlaanderen.be/id/concept/StandaardStatus/KandidaatStandaard",
+        "publication-date": "2024-10-01",
         "license": "https://data.vlaanderen.be/id/licentie/modellicentie-gratis-hergebruik/v1.0",
         "contributors-file": "stakeholders.csv",
         "contributors-column": "MijnKolom",
