@@ -73,3 +73,8 @@ Kandidaatstandaard observaties:
  - zet package tag OSLO-BO_OBservaties voor bemonsterdObject eigenschap
  - verwijder enkele klasses uit Hulppakket van diagramma om dubbele voorkomen te verminderen.
  - verwijder hidden geassocieerdschuifweerstandsproef
+ - bepaal commit voor kandidaat-2023-04-01
+ - zet status and datum correct
+
+kandidaatstandaard interpretaties:
+ - zet status and datum correct
